--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
     box-sizing: border-box;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Open Sans', sans-serif !important;
 }
 
 body {
@@ -10,50 +10,57 @@ body {
   }
 
 header {
-    padding: 20px;
-    display: flex;
-    justify-content: space-between;
-    background-color: antiquewhite;
+    padding: 60px;
+    height:auto;
+    background-color:#FFFF99;
 }
 
 header h1 {
     padding: 15px;
-    color: #ccadfa;
+    color: #f57ac3;
+    font-size: 40px;
+    display: inline;
 
 }
 
 header nav {
-    padding: 25px;
-    margin: 15px 20px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 15px;
-    list-style-type: none;
-    align-items: center;
+    display: flex;
+    padding: 15px;
+    margin-right: 20px;
+    float: right;
+    font-size: 20px ;
 }
 
 header nav a {
     display: inline-block;
     margin: 0px 20px;
     color: #f0a9d4;
+    text-decoration: none;
 }   
-
-
-  /*
-.lillie {
-    max-width: 15%;
-    height: auto; 
-    border-radius: 75%;
-} */
 
 .hero {
     height: 800px;
     width: 100%;
+    margin-top: -2.5rem;
     margin-bottom: 25px;
     background-image: url("./assets/pineapple.jpg");
     background-size: cover;
     background-position: center;
 }
 
+main {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 2%;
+}
+
+h2{
+    font-family: 'Open Sans', sans-serif !important;
+    line-height: 1.1;
+    font-size: 40px;
+    font-weight: 300;
+
+}
 .aboutme {
     padding: 20px;
     margin: 30px;
@@ -61,15 +68,70 @@ header nav a {
     background-color: white;
 }
 
-/*
-.friut {
-    height: 50%;
-    width: 100%;
-    margin-bottom: 25px;
-    align-items: center;
-}*/
-
-ul {
-    list-style-type: none;
+#me {
+    text-align: center;
 }
 
+#work,
+#contact {
+    padding: 20px;
+    margin: 30px;
+    display: flexbox;
+    text-align: center;
+}
+
+.work {
+    flex: 1 0 0px;
+    padding: 0px;
+    margin: 20px 0px;
+    display: inline-block;
+    transition: transform .2s;
+}
+
+.work:hover{
+    transform: scale(1.1);
+}
+
+.qword{ 
+    font-size: 20px;
+}
+
+#contact {
+    flex: 1 0 0px;
+    flex-direction: column;
+    display: inline-block;
+    padding: 10px;
+    border-style: solid white;
+    border-width: 1px;
+}
+
+section a{
+    padding: 10px;
+    margin: 0px 40px;
+    display: inline;
+    background-color: white;
+}
+
+footer {
+    padding: 30px;
+    text-align: center;
+}
+
+h4 {
+    font-size: 10px;
+    display: block;
+    margin-block-start: 1.33em;
+    margin-block-end: 1.33em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
+@media screen and (max-width: 768px) {
+    header {
+      flex-direction: column;
+    }
+  
+    main {
+      max-width: 1200px;
+    }
+  }
