--- a/style.css
+++ b/style.css
@@ -4,177 +4,20 @@
     font-family: 'PT Mono', monospace;
 }
 
-body {
-    background-color: white;
-    padding: 0;
-    margin: 0;
-  }
-
-header {
-    padding: 60px;
-    height:auto;
-    background-color:  #FFFF99;
+#mainBody{
+    position: relative;
+    padding-bottom: 50px;
 }
 
-header h1 {
-    padding: 15px;
-    color: #f57ac3;
-    font-size: 40px;
-    display: inline;
-
+header.container{
+    margin-top: 30px;
+    margin-bottom: 50px;
 }
 
-header nav {
-    display: flex;
-    padding: 15px;
-    margin-right: 20px;
-    float: right;
-    font-size: 20px ;
-}
 
-header nav a {
-    display: inline-block;
-    margin: 0px 20px;
-    color: #f0a9d4;
-    text-decoration: none;
-}   
-
-.hero {
-    display: flex;
-    flex-wrap: wrap;
-    height: 800px;
-    width: 100%;
-    margin-top: -2.5rem;
-    margin-bottom: 25px;
-    background-image: url("./assets/pineapple.jpg");
-    background-size: cover;
-    background-position: center;
-}
-
-main {
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 2%;
-}
-
-#me {
+footer{
     text-align: center;
-    color: #f57ac3;
+    border-top: 1px solid #2f5d62;
+    padding: 20px 0;
+    font-size: .875rem;
 }
-
-h2{
-    font-family: 'Open Sans', sans-serif !important;
-    line-height: 1.1;
-    font-size: 40px;
-    font-weight: 300;
-    color: #ccadfa;
-
-}
-
-.hh {
-    font-size: 30px; 
-    text-align: center;
-}
-
-.aboutme {
-    padding: 40px 60px;
-    margin: 30px;
-    display:block;
-    
-}
-
-.lillie{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 50%;
-    border: 8px solid #ccadfa;
-    width:fit-content;
-}
-
-.pp{
-    font-size: 18px; 
-}
-
-#work,
-#contact {
-    padding: 20px;
-    margin: 0px 30px;
-    display: flexbox;
-    text-align: center;
-    
-}
-
-.column {
-    flex: 1 0 0px;
-    flex-wrap: wrap;
-    padding:5px 130px 20px;
-    margin-top: 0%;
-    display: inline-block;
-    transition:trasform .2s ;
-}
-
-.work{
-    margin: 5px 0px;
-}
-
-/* Making photo bigger when cursor is hovering the image */
-.work:hover{
-    transform: scale(1.1);
-}
-
-.qword{ 
-    font-size: 20px;
-}
-
-.container{
-    padding: 15px 25px 10px ;
-    margin: 0px 40px 0px;
-    display: inline-block;
-    
-}
-
-#contact {
-    flex: 1 0 0px;
-    flex-direction: column;
-    display: inline-block;
-    padding: 10px;
-    border-style: solid white;
-    border-width: 1px;
-}
-
-.contact{
-    display: inline;
-    margin: 0px 40px;
-    color:black;
-    text-decoration: none;
-}
-
-footer {
-    padding: 30px;
-    text-align: center;
-}
-
-h4 {
-    font-size: 10px;
-    display: block;
-    margin-block-start: 1.33em;
-    margin-block-end: 1.33em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-}
-
-@media screen and (max-width: 768px) {
-    header {
-      flex-direction: column;
-    }
-  
-    main {
-      max-width: 1200px;
-    }
-
-    .work{
-        width: fit-content;
-    }
-  } 
-
