--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@ body{
     font-family: 'Bai Jamjuree', sans-serif;
     font-family: 'PT Mono', monospace;
     font-size: 1rem;
-    color: #364547;
+    color: #113f67;
+    background-color: #e7eaf6;
 
 }
 
@@ -22,11 +23,11 @@ header.container{
     margin-bottom: 50px;
 }
 
-.container {
+.containerSet {
     width: 90%;
     max-width: 1200px;
     min-width: 432px;
-    margin: 0 auto;
+    margin: 0px auto;
     position: relative;
 }
 
@@ -42,8 +43,16 @@ header.container{
 }
 
 .jumbotron{
-    margin: 100px -50px 30px -50px;
+    padding-bottom: 25px;
+    padding-top: 25px;
+    margin-top: 100px;
+    border: dashed 3px #a2a8d3;
+    border-radius: 5px;
 }
+
+/* .img-fluid{
+    width: 50%;
+} */
 
 div {
     display: block;
